# hackbot

./: .gitignore  CODE_OF_CONDUCT.md  DONATE.md  Dockerfile  LICENSE  README.md  RELEASE.md  RELEASE_NOTES_v1.1.1.md  RELEASE_NOTES_v1.1.2.md  RELEASE_NOTES_v1.2.1.md  RELEASE_NOTES_v1.2.2.md  RELEASE_NOTES_v1.2.3.md  SECURITY.md  SOC.md  docker-compose.yml  install.bat  install.sh  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
examples/: HackBot_Colab.ipynb
examples/plugins/: http_headers.py  port_check.py
hackbot/: __init__.py  cli.py  config.py  memory.py  reporting.py
hackbot/core/: __init__.py  attack.py  campaigns.py  compliance.py  cve.py  diff_report.py  engine.py  osint.py  pdf_report.py  plugins.py  proxy.py  remediation.py  runner.py  topology.py  updater.py  vulndb.py  zeroday.py  zeroday_active.py
hackbot/gui/: __init__.py  app.py
hackbot/gui/templates/: index.html
hackbot/integrations/: __init__.py  telegram_bot.py
hackbot/integrations/telegram_bot/: __init__.py  auth.py  bot.py  constants.py  handlers.py  session.py  utils.py
hackbot/modes/: __init__.py  agent.py  chat.py  plan.py
hackbot/ui/: __init__.py
manual/: 01-getting-started.md  02-cli-reference.md  03-gui-reference.md  04-modes.md  05-intelligence-modules.md  06-ai-providers.md  07-reporting.md  08-memory-sessions.md  09-configuration.md  10-troubleshooting.md  11-attack-mapping.md  12-vulnerability-database.md  13-nvd-api-integration.md  14-plugin-creation.md  15-zeroday-engine.md  README.md
public/: hackbot.desktop
tests/: __init__.py  test_attack.py  test_campaigns.py  test_compliance.py  test_config.py  test_diff_report.py  test_engine.py  test_intel.py  test_memory.py  test_modes.py  test_pdf_report.py  test_plugins.py  test_proxy.py  test_remediation.py  test_reporting.py  test_runner.py  test_telegram.py  test_updater.py  test_vulndb.py
website/: index.html
